# chapitre-06-2-BourgonLaurent

./: exercice.py  pyproject.toml
