[tool.poetry]
name = "chapitre-06-2"
version = "0.1.0"
description = ""
authors = ["Laurent Bourgon <laurent.bourgon@outlook.com>"]
readme = "README.md"
packages = [{include = "chapitre_06_2"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
